# simplerest

./: .dockerignore  Dockerfile  README.md  main.py  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: simplerest.yml
k8s/: deployment-a-v1.yml  deployment-b-v1.yml  deployment-b-v2.yml  deployment-c-v1.yml
tests/: test_rest.py
