[metadata]
name = Rest API
description = Simple Rest API to test Service Mesh functionality
author = Alejandro Nevigato <anevigat@gmail.com>
license = GPLv2+
version = 0.1.0

[options]
py_modules = []
include_package_data = True
install_requires =
  flask
  requests

[options.extras_require]
dev =
    tox

[tox:tox]
envlist = flake8,pylint,isort,pydocstyle,coverage

[testenv]
extras = dev

[testenv:flake8]
deps =
    flake8
commands = flake8 tests main.py

[flake8]
exclude = .tox,build,dist,.eggs,venv,.venv
max-line-length = 100
per-file-ignores =
    nevigato/__init__.py:F401

[testenv:pylint]
deps =
    pylint
commands = pylint tests main.py

[testenv:isort]
deps = isort
commands = isort --check --diff .

[testenv:pydocstyle]
deps = pydocstyle
commands = pydocstyle --match-dir='^(?!(\.|build|dist|venv|.venv)).*'

[testenv:coverage]
deps =
    pytest
    pytest-cov
    coverage
commands =
  coverage run --branch -m pytest --junitxml=coverage/junit.xml --color=yes -v
  coverage report -m
  coverage html -d coverage/
  coverage xml -o coverage/coverage.xml
